update Publican core translations

--- a/publican/po/ia.po
+++ b/publican/po/ia.po
@@ -3,21 +3,19 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # Nik Kalach <nikka@fedoraproject.org>, 2012.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: 2012-10-08 05:59-0400\n"
 "Last-Translator: Nik Kalach <nikka@fedoraproject.org>\n"
-"Language-Team: Interlingua (International Auxiliary Language Association) "
-"<trans-ia@lists.fedoraproject.org>\n"
+"Language-Team: Interlingua (International Auxiliary Language Association) <trans-ia@lists.fedoraproject.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Language: ia\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Gtranslator 2.91.5\n"
+"X-Generator: Zanata 2.0.2\n"
 
 #: lib/Publican/TreeView.pm:200
 msgid ""
@@ -209,8 +207,8 @@ msgstr ""
 
 #: bin/publican:272
 msgid ""
-"Add or remove database entries. Used for processing pre-build books, such as "
-"when building packages."
+"Add or remove database entries. Used for processing pre-build books, such as"
+" when building packages."
 msgstr ""
 
 #. ($lang)
@@ -578,8 +576,8 @@ msgstr ""
 #. ($tag)
 #: lib/Publican/XmlClean.pm:622
 msgid ""
-"ERROR: Banned tag (%1) detected. Discuss this with your brands owners if you "
-"think this is in error."
+"ERROR: Banned tag (%1) detected. Discuss this with your brands owners if you"
+" think this is in error."
 msgstr ""
 
 #. ($revnumber,q|\d[0-9.]*-\d[0-9.]*|)
@@ -644,14 +642,14 @@ msgstr ""
 
 #: lib/Publican/XmlClean.pm:362
 msgid ""
-"FATAL ERROR: arch profiling would prune root node. Do NOT set arch in a root "
-"node."
+"FATAL ERROR: arch profiling would prune root node. Do NOT set arch in a root"
+" node."
 msgstr ""
 
 #: lib/Publican/XmlClean.pm:383
 msgid ""
-"FATAL ERROR: condition profiling would prune root node. Do NOT set condition "
-"in a root node."
+"FATAL ERROR: condition profiling would prune root node. Do NOT set condition"
+" in a root node."
 msgstr ""
 
 #: lib/Publican/XmlClean.pm:343
@@ -877,8 +875,8 @@ msgstr ""
 
 #: lib/Publican.pm:1179
 msgid ""
-"NOTE: These lists of tags and attributes are brand specific and are not part "
-"of Publican itself."
+"NOTE: These lists of tags and attributes are brand specific and are not part"
+" of Publican itself."
 msgstr ""
 
 #: lib/Publican/CreateBook.pm:220
@@ -903,11 +901,9 @@ msgstr ""
 
 #: bin/publican:574
 msgid ""
-"Now that your site is migrated you will need to rebuild your brands and "
-"install the brands web payload on your site.\n"
+"Now that your site is migrated you will need to rebuild your brands and install the brands web payload on your site.\n"
 "\n"
-"It is also recommended that you rebuild and reinstall all books to ensure "
-"the layout is properly migrated."
+"It is also recommended that you rebuild and reinstall all books to ensure the layout is properly migrated."
 msgstr ""
 
 #: bin/publican:602
@@ -935,7 +931,8 @@ msgid "Override path to Common_Content directory"
 msgstr ""
 
 #: lib/Publican.pm:336
-msgid "Override the book name, bottom level, menu label on a Publican website."
+msgid ""
+"Override the book name, bottom level, menu label on a Publican website."
 msgstr ""
 
 #: lib/Publican.pm:205
@@ -1052,8 +1049,8 @@ msgstr ""
 
 #: lib/Publican.pm:230
 msgid ""
-"Product this package covers. Fetched from productname tag in xml_lang/"
-"TYPE_Info.xml"
+"Product this package covers. Fetched from productname tag in "
+"xml_lang/TYPE_Info.xml"
 msgstr ""
 
 #: lib/Publican/WebSite.pm:105
@@ -1169,8 +1166,8 @@ msgstr ""
 
 #: lib/Publican.pm:309
 msgid ""
-"Splash pages should be generated to be compatible with this web style. Valid "
-"values are 1 and 2."
+"Splash pages should be generated to be compatible with this web style. Valid"
+" values are 1 and 2."
 msgstr ""
 
 #. ($book)
@@ -1201,8 +1198,8 @@ msgstr ""
 
 #: lib/Publican/WebSite.pm:96
 msgid ""
-"The Navigation Menu below will automatically collapse when pages are loaded. "
-"Enable cookies to fix the Navigation Menu functionality."
+"The Navigation Menu below will automatically collapse when pages are loaded."
+" Enable cookies to fix the Navigation Menu functionality."
 msgstr ""
 
 #: lib/Publican.pm:227
@@ -1279,8 +1276,8 @@ msgstr ""
 #: lib/Publican.pm:321
 msgid ""
 "This is a host name for a Publican-generated website, used for searches and "
-"the Sitemap. Be sure to include the full path to your document tree. E.g. if "
-"your documents are in the docs directory: http://www.example.com/docs"
+"the Sitemap. Be sure to include the full path to your document tree. E.g. if"
+" your documents are in the docs directory: http://www.example.com/docs"
 msgstr ""
 
 #: lib/Publican.pm:316
@@ -1354,8 +1351,8 @@ msgstr ""
 
 #: lib/Publican.pm:243
 msgid ""
-"Type of repository in which books that form part of a remote set are stored. "
-"Supported types: SVN."
+"Type of repository in which books that form part of a remote set are stored."
+" Supported types: SVN."
 msgstr ""
 
 #: lib/Publican.pm:167
@@ -1431,8 +1428,8 @@ msgstr ""
 
 #: lib/Publican.pm:288
 msgid ""
-"Version of this package. Fetched from productnumber tag in xml_lang/"
-"TYPE_Info.xml"
+"Version of this package. Fetched from productnumber tag in "
+"xml_lang/TYPE_Info.xml"
 msgstr ""
 
 #: lib/Publican/WebSite.pm:107
@@ -1470,14 +1467,14 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:2249
 msgid ""
-"WARNING: You can not create RPM packages with a blank abstract. Skipping RPM "
-"creation.\n"
+"WARNING: You can not create RPM packages with a blank abstract. Skipping RPM"
+" creation.\n"
 msgstr ""
 
 #: lib/Publican/Builder.pm:2259
 msgid ""
-"WARNING: You can not create RPM packages with a blank subtitle. Skipping RPM "
-"creation.\n"
+"WARNING: You can not create RPM packages with a blank subtitle. Skipping RPM"
+" creation.\n"
 msgstr ""
 
 #: lib/Publican/XmlClean.pm:885
