--- a/publican/po/kn.po
+++ b/publican/po/kn.po
@@ -1,20 +1,16 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+# shanky <shanky@fedoraproject.org>, 2012. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: \n"
-"Last-Translator: \n"
-"Language-Team: Spanish\n"
+"PO-Revision-Date: 2012-08-31 02:44-0400\n"
+"Last-Translator: shanky <shanky@fedoraproject.org>\n"
+"Language-Team: Kannada\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: kn\n"
+"Plural-Forms: nplurals=2; plural=(n!=1)\n"
 "X-Generator: Zanata 2.0.2\n"
 
 #: lib/Publican/TreeView.pm:200
@@ -1342,7 +1338,7 @@ msgstr ""
 #. ($edition,$release)
 #: lib/Publican/Translate.pm:292
 msgid "Translation files synchronised with XML sources %1-%2"
-msgstr ""
+msgstr "%1-%2 XML ಮೂಲಗಳಿಂದ ಅನುವಾದ ಕಡತಗಳನ್ನು ಹೊಂದಾಣಿಕೆ ಮಾಡಲು ಸಾಧ್ಯವಾಗಿಲ್ಲ"
 
 #: lib/Publican.pm:276
 msgid ""
