--- a/publican/po/pa.po
+++ b/publican/po/pa.po
@@ -1,19 +1,15 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
-# 
+# jassy <jassy@fedoraproject.org>, 2012. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: \n"
-"Last-Translator: \n"
-"Language-Team: Spanish\n"
+"PO-Revision-Date: 2012-08-31 06:02-0400\n"
+"Last-Translator: jassy <jassy@fedoraproject.org>\n"
+"Language-Team: Punjabi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: es\n"
+"Language: pa\n"
 "Plural-Forms: nplurals=2; plural=(n != 1)\n"
 "X-Generator: Zanata 2.0.2\n"
 
@@ -1342,7 +1338,7 @@ msgstr ""
 #. ($edition,$release)
 #: lib/Publican/Translate.pm:292
 msgid "Translation files synchronised with XML sources %1-%2"
-msgstr ""
+msgstr "ਅਨੁਵਾਦ ਫਾਇਲਾਂ XML ਸਰੋਤਾਂ %1-%2 ਨਾਲ ਸਮਕਾਲੀ ਕੀਤੀਆਂ ਗਈਆਂ ਹਨ"
 
 #: lib/Publican.pm:276
 msgid ""
