--- a/publican/po/th.po
+++ b/publican/po/th.po
@@ -9,12 +9,12 @@ msgstr ""
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
-"Language-Team: Spanish\n"
+"Language-Team: Thai\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Language: th\n"
+"Plural-Forms: nplurals=1; plural=0\n"
 "X-Generator: Zanata 2.0.2\n"
 
 #: lib/Publican/TreeView.pm:200
