--- a/publican/Changes
+++ b/publican/Changes
@@ -1,6 +1,6 @@
 3.1.0 UNRELEASED
   - Add Interlingua support from Nik Kalach <nik.kalach@inbox.ru> BZ #863899
-  - Replace hard coded paths with publican::ConfigData. BZ #661946
+  - Replace hard coded paths with Publican::ConfigData. BZ #661946
   - Ensure Publican source builds and tests without Publican being installed. BZ #874180
   - Fix broken menu alignment. BZ #880621
   - Ensure clean_ids doesn't change owner or group. BZ #854425
@@ -21,8 +21,7 @@
   - Remove DocBook TOCs from PDF. BZ #874795
   - Use better TOC for PDF. BZ #879388
   - Fix directory ownership in SPEC file. BZ #894522
-  - Fix TOC anchor resloution. BZ #879388
-
+  - Fix link resloution. BZ #879388
 
 3.0.0  Wed Oct 31 2012
   - Update Changes file. BZ #661568
