Fix web site CSS for admonitions. BZ #908539

--- a/publican/Changes
+++ b/publican/Changes
@@ -1,4 +1,7 @@
-3.1.0 UNRELEASED
+3.1.1 Thu Feb 07 2013
+  - Fix web site CSS for admonitions breaking layout for books built on P3.0. BZ #908539
+
+3.1.0 Wed Feb 06 2013
   - Add Interlingua support from Nik Kalach <nik.kalach@inbox.ru> BZ #863899
   - Replace hard coded paths with Publican::ConfigData. BZ #661946
   - Ensure Publican source builds and tests without Publican being installed. BZ #874180
