Fix tests failing when publican not installed. BZ #908956 Fix broken mr-IN/Conventions.po. BZ #908956

--- a/publican/Changes
+++ b/publican/Changes
@@ -1,3 +1,7 @@
+3.1.2 Fri Feb 08 2013
+  - Fix tests failing when publican not installed. BZ #908956
+  - Fix broken mr-IN/Conventions.po. BZ #908956
+
 3.1.1 Thu Feb 07 2013
   - Fix web site CSS for admonitions breaking layout for books built on P3.0. BZ #908539
 
