add missing tarnslations for cobver texts fix templates

--- a/publican/po/cs.po
+++ b/publican/po/cs.po
@@ -178,7 +178,7 @@ msgstr "Čárkou oddělený seznam knih, které použijí v této vzdálené sad
 
 #: lib/Publican/Builder.pm:1115
 msgid "Abstract"
-msgstr ""
+msgstr "Abstrakt"
 
 #: bin/publican:141
 msgid "Abstract for a book"
@@ -613,7 +613,7 @@ msgstr "Poskytovatel zásuvného modulu Eclipse. Standardně \"Publican-%1\""
 
 #: lib/Publican/Builder.pm:1109
 msgid "Edited by"
-msgstr ""
+msgstr "Sestavil"
 
 #: bin/publican:113
 msgid "Embed the web site TOC object in the generated HTML"
@@ -867,7 +867,7 @@ msgstr "Jazyky, které se nahradí xml_lang bez ohledu na stav překladu."
 
 #: lib/Publican/Builder.pm:1113
 msgid "Legal Notice"
-msgstr ""
+msgstr "Právní doložka"
 
 #: lib/Publican.pm:1342
 #, fuzzy
@@ -1233,7 +1233,7 @@ msgstr "Podtitul knihy"
 
 #: lib/Publican/Builder.pm:1147
 msgid "Table of Contents"
-msgstr ""
+msgstr "Obsah"
 
 #: lib/Publican.pm:1257
 msgid "Technical Editor"
