--- a/publican/po/fr.po
+++ b/publican/po/fr.po
@@ -173,7 +173,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1115
 msgid "Abstract"
-msgstr ""
+msgstr "Résumé"
 
 #: bin/publican:141
 msgid "Abstract for a book"
@@ -607,7 +607,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1109
 msgid "Edited by"
-msgstr ""
+msgstr "Publié par"
 
 #: bin/publican:113
 msgid "Embed the web site TOC object in the generated HTML"
@@ -860,7 +860,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1113
 msgid "Legal Notice"
-msgstr ""
+msgstr "Note légale"
 
 #: lib/Publican.pm:1342
 msgid "Legal notice can not be calculated before building."
@@ -1221,7 +1221,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1147
 msgid "Table of Contents"
-msgstr ""
+msgstr "Table des matières"
 
 #: lib/Publican.pm:1257
 msgid "Technical Editor"
