--- a/publican/po/pl.po
+++ b/publican/po/pl.po
@@ -197,7 +197,7 @@ msgstr "Lista książek użytych w tym zdalnym zestawie, rozdzielona spacjami."
 
 #: lib/Publican/Builder.pm:1115
 msgid "Abstract"
-msgstr ""
+msgstr "Abstrakt"
 
 #: bin/publican:141
 msgid "Abstract for a book"
@@ -698,7 +698,7 @@ msgstr "Dostawca wtyczki programu Eclipse. Domyślny to \"Publican-%1\""
 
 #: lib/Publican/Builder.pm:1109
 msgid "Edited by"
-msgstr ""
+msgstr "Redakcja: "
 
 # translation auto-copied from project Publican, version 3, document publican
 #: bin/publican:113
@@ -992,7 +992,7 @@ msgstr "Języki do zastąpienia xml_lang, niezależnie od stanu tłumaczenia."
 
 #: lib/Publican/Builder.pm:1113
 msgid "Legal Notice"
-msgstr ""
+msgstr "Informacja Prawna"
 
 # translation auto-copied from project Publican, version 3, document publican
 #: lib/Publican.pm:1342
@@ -1415,7 +1415,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1147
 msgid "Table of Contents"
-msgstr ""
+msgstr "Spis treści"
 
 #: lib/Publican.pm:1257
 msgid "Technical Editor"
