--- a/publican/po/pt_BR.po
+++ b/publican/po/pt_BR.po
@@ -174,7 +174,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1115
 msgid "Abstract"
-msgstr ""
+msgstr "Resumo"
 
 #: bin/publican:141
 msgid "Abstract for a book"
@@ -608,7 +608,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1109
 msgid "Edited by"
-msgstr ""
+msgstr "Editado por"
 
 #: bin/publican:113
 msgid "Embed the web site TOC object in the generated HTML"
@@ -861,7 +861,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1113
 msgid "Legal Notice"
-msgstr ""
+msgstr "Nota Legal"
 
 #: lib/Publican.pm:1342
 msgid "Legal notice can not be calculated before building."
@@ -1222,7 +1222,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1147
 msgid "Table of Contents"
-msgstr ""
+msgstr "Índice"
 
 #: lib/Publican.pm:1257
 msgid "Technical Editor"
