--- a/publican/po/ru.po
+++ b/publican/po/ru.po
@@ -178,7 +178,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1115
 msgid "Abstract"
-msgstr ""
+msgstr "Аннотация"
 
 #: bin/publican:141
 msgid "Abstract for a book"
@@ -615,7 +615,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1109
 msgid "Edited by"
-msgstr ""
+msgstr "Под редакцией"
 
 #: bin/publican:113
 msgid "Embed the web site TOC object in the generated HTML"
@@ -871,7 +871,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1113
 msgid "Legal Notice"
-msgstr ""
+msgstr "Юридическое уведомление"
 
 #: lib/Publican.pm:1342
 msgid "Legal notice can not be calculated before building."
@@ -1239,7 +1239,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1147
 msgid "Table of Contents"
-msgstr ""
+msgstr "Содержание"
 
 #: lib/Publican.pm:1257
 msgid "Technical Editor"
