--- a/publican/po/te.po
+++ b/publican/po/te.po
@@ -171,7 +171,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1115
 msgid "Abstract"
-msgstr ""
+msgstr "సంక్షిప్తము"
 
 #: bin/publican:141
 msgid "Abstract for a book"
@@ -605,7 +605,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1109
 msgid "Edited by"
-msgstr ""
+msgstr "వీరిచేత సరికూర్చబడింది"
 
 #: bin/publican:113
 msgid "Embed the web site TOC object in the generated HTML"
@@ -858,7 +858,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1113
 msgid "Legal Notice"
-msgstr ""
+msgstr "చట్టబద్ద నోటీసు"
 
 #: lib/Publican.pm:1342
 msgid "Legal notice can not be calculated before building."
@@ -1219,7 +1219,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1147
 msgid "Table of Contents"
-msgstr ""
+msgstr "సారముల పట్టిక"
 
 #: lib/Publican.pm:1257
 msgid "Technical Editor"
