--- a/publican/po/bn_IN.po
+++ b/publican/po/bn_IN.po
@@ -171,7 +171,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1115
 msgid "Abstract"
-msgstr ""
+msgstr "সারসংক্ষেপ"
 
 #: bin/publican:141
 msgid "Abstract for a book"
@@ -605,7 +605,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1109
 msgid "Edited by"
-msgstr ""
+msgstr "সম্পাদক"
 
 #: bin/publican:113
 msgid "Embed the web site TOC object in the generated HTML"
@@ -858,7 +858,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1113
 msgid "Legal Notice"
-msgstr ""
+msgstr "আইনী বিবৃতি"
 
 #: lib/Publican.pm:1342
 msgid "Legal notice can not be calculated before building."
@@ -1219,7 +1219,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1147
 msgid "Table of Contents"
-msgstr ""
+msgstr "সূচিপত্র"
 
 #: lib/Publican.pm:1257
 msgid "Technical Editor"
