--- a/publican/po/fa.po
+++ b/publican/po/fa.po
@@ -178,7 +178,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1115
 msgid "Abstract"
-msgstr ""
+msgstr "چكيده"
 
 #: bin/publican:141
 msgid "Abstract for a book"
@@ -615,7 +615,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1109
 msgid "Edited by"
-msgstr ""
+msgstr "ویرایستار"
 
 #: bin/publican:113
 msgid "Embed the web site TOC object in the generated HTML"
@@ -869,7 +869,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1113
 msgid "Legal Notice"
-msgstr ""
+msgstr "اخطار قانونی"
 
 #: lib/Publican.pm:1342
 msgid "Legal notice can not be calculated before building."
@@ -1233,7 +1233,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1147
 msgid "Table of Contents"
-msgstr ""
+msgstr "فهرست"
 
 #: lib/Publican.pm:1257
 msgid "Technical Editor"
