--- a/publican/po/ja.po
+++ b/publican/po/ja.po
@@ -180,7 +180,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1115
 msgid "Abstract"
-msgstr ""
+msgstr "概要"
 
 #: bin/publican:141
 msgid "Abstract for a book"
@@ -616,7 +616,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1109
 msgid "Edited by"
-msgstr ""
+msgstr "編集者"
 
 #: bin/publican:113
 msgid "Embed the web site TOC object in the generated HTML"
@@ -870,7 +870,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1113
 msgid "Legal Notice"
-msgstr ""
+msgstr "法律上の通知"
 
 #: lib/Publican.pm:1342
 msgid "Legal notice can not be calculated before building."
@@ -1233,7 +1233,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1147
 msgid "Table of Contents"
-msgstr ""
+msgstr "目次"
 
 #: lib/Publican.pm:1257
 msgid "Technical Editor"
