--- a/publican/po/nb.po
+++ b/publican/po/nb.po
@@ -175,7 +175,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1115
 msgid "Abstract"
-msgstr ""
+msgstr "Sammendrag"
 
 #: bin/publican:141
 msgid "Abstract for a book"
@@ -609,7 +609,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1109
 msgid "Edited by"
-msgstr ""
+msgstr "Redigert av"
 
 #: bin/publican:113
 msgid "Embed the web site TOC object in the generated HTML"
@@ -862,7 +862,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1113
 msgid "Legal Notice"
-msgstr ""
+msgstr "Rettslig merknad"
 
 #: lib/Publican.pm:1342
 msgid "Legal notice can not be calculated before building."
@@ -1223,7 +1223,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1147
 msgid "Table of Contents"
-msgstr ""
+msgstr "Innholdsfortegnelse"
 
 #: lib/Publican.pm:1257
 msgid "Technical Editor"
