--- a/publican/po/nl.po
+++ b/publican/po/nl.po
@@ -176,7 +176,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1115
 msgid "Abstract"
-msgstr ""
+msgstr "Samenvatting"
 
 #: bin/publican:141
 msgid "Abstract for a book"
@@ -612,7 +612,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1109
 msgid "Edited by"
-msgstr ""
+msgstr "Onder redactie van"
 
 #: bin/publican:113
 msgid "Embed the web site TOC object in the generated HTML"
@@ -866,7 +866,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1113
 msgid "Legal Notice"
-msgstr ""
+msgstr "Juridische kennisgeving"
 
 #: lib/Publican.pm:1342
 msgid "Legal notice can not be calculated before building."
@@ -1229,7 +1229,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1147
 msgid "Table of Contents"
-msgstr ""
+msgstr "Inhoudsopgave"
 
 #: lib/Publican.pm:1257
 msgid "Technical Editor"
