--- a/publican/Changes
+++ b/publican/Changes
@@ -1,10 +1,16 @@
-3.1.2 Fri Feb 08 2013
+3.1.3 UNRELEASED
+  - Fix add_revision breaking XML parser. BZ #912985
+  - Stronger fix for cover pages causing page number overrun. BZ #912967
+  - Fix CSS for article front page subtile. BZ #913016
+
+3.1.2 Tue Feb 19 2013
   - Fix tests failing when publican not installed. BZ #908956
   - Fix broken mr-IN/Conventions.po. BZ #908956
   - Fix footnote link unclickable. BZ #909006
   - Fix missing translations for common files. BZ #908976
   - Fix using edition for version on cover pages. BZ #912180
   - Fix nested entities causing XML::TreeBuilder to fail. BZ #912187
+  - Fix for cover pages causing page number overrun. BZ #912967
 
 3.1.1 Thu Feb 07 2013
   - Fix web site CSS for admonitions breaking layout for books built on P3.0. BZ #908539
