--- a/publican/TODO
+++ b/publican/TODO
@@ -56,4 +56,12 @@ $ publican site_stats --site_config tester.cfg
 The database contains books that cover 1 products, 1 languages,  totaling 1 packages
 
 
+Actions without tests:
+
+clean_set
+create_brand
+install_brand
+migrate_site
+rename
+update_db
 
