--- a/publican/Changes
+++ b/publican/Changes
@@ -1,4 +1,4 @@
-3.1.3 UNRELEASED
+3.1.3 Fri Feb 22 2013
   - Fix add_revision breaking XML parser. BZ #912985
   - Stronger fix for cover pages causing page number overrun. BZ #912967
   - Fix CSS for article front page subtile. BZ #913016
