--- a/publican/Changes
+++ b/publican/Changes
@@ -1,3 +1,6 @@
+3.2
+  - add translations of "Revision History"
+
 3.1.3 Fri Feb 22 2013
   - Fix add_revision breaking XML parser. BZ #912985
   - Stronger fix for cover pages causing page number overrun. BZ #912967
