--- a/publican/Changes
+++ b/publican/Changes
@@ -1,4 +1,5 @@
-3.2
+3.1.4 UNRELEASED
+  - Fix entities in Book_Info braking build. BZ #917898
   - add translations of "Revision History"
 
 3.1.3 Fri Feb 22 2013
