--- a/publican/Changes
+++ b/publican/Changes
@@ -1,7 +1,8 @@
 3.1.4 UNRELEASED
   - Fix entities in Book_Info braking build. BZ #917898
-  - add translations of "Revision History"
-  - Fix TOC title not translated in PDF. BZ #
+  - add translations of "Revision History". BZ #918365
+  - Fix TOC title not translated in PDF. BZ #918365
+  - Fix translated strings with parameters. BZ #891166
 
 3.1.3 Fri Feb 22 2013
   - Fix add_revision breaking XML parser. BZ #912985
