--- a/publican/Changes
+++ b/publican/Changes
@@ -3,6 +3,8 @@
   - add translations of "Revision History". BZ #918365
   - Fix TOC title not translated in PDF. BZ #918365
   - Fix translated strings with parameters. BZ #891166
+  - update translations
+  - add it-IT translation of PUG via <fedora@marionline.it> BZ #797515
 
 3.1.3 Fri Feb 22 2013
   - Fix add_revision breaking XML parser. BZ #912985
