--- a/publican/po/fa.po
+++ b/publican/po/fa.po
@@ -48,16 +48,17 @@ msgstr ""
 msgid "%1 exited with value %2"
 msgstr ""
 
-# translation auto-copied from project Publican, version 3, document publican
 #. ('toc_path')
+# translation auto-copied from project Publican, version 3, document publican
 #: lib/Publican/WebSite.pm:144
 msgid "%1 is a mandatory field in a site configuration file"
 msgstr "فیلد %1 در فایل پیکره بندی سایت اجباری است"
 
-# translation auto-copied from project Publican, version 3, document publican
 #. ('db_file',$site_config)
+# translation auto-copied from project Publican, version 3, document publican
 #: lib/Publican/WebSite.pm:152
-msgid "%1 is a mandatory field in a site configuration file. Check %2 for validity."
+msgid ""
+"%1 is a mandatory field in a site configuration file. Check %2 for validity."
 msgstr "فیلد %1 در فایل پیکره بندی سایت ضروری است. کنترل اعتبار %2"
 
 #. ('cmd')
@@ -96,7 +97,9 @@ msgstr ""
 
 #. ($language)
 #: lib/Publican/Builder.pm:2316
-msgid "'%1' is not a valid language for highlighting. Language names are case sensitive."
+msgid ""
+"'%1' is not a valid language for highlighting. Language names are case "
+"sensitive."
 msgstr ""
 
 #: lib/Publican/Builder.pm:2400 lib/Publican/Builder.pm:2415
@@ -143,7 +146,10 @@ msgstr ""
 
 #. ($tag)
 #: lib/Publican/XmlClean.pm:678
-msgid "*WARNING: Unvalidated tag: '%1'. This tag may not be displayed correctly, may generate invalid xhtml, or may breach Section 508 Accessibility standards."
+msgid ""
+"*WARNING: Unvalidated tag: '%1'. This tag may not be displayed correctly, "
+"may generate invalid xhtml, or may breach Section 508 Accessibility "
+"standards."
 msgstr ""
 
 #: bin/publican:125
@@ -152,15 +158,24 @@ msgstr ""
 
 # translation auto-copied from project Publican, version 3, document publican
 #: lib/Publican/WebSite.pm:101
-msgid "<p>The Navigation Menu above requires JavaScript to function.</p><p>Enable JavaScript to allow the Navigation Menu to function.</p><p>Disable CSS to view the Navigation options without JavaScript enabled</p>"
-msgstr "<p> منوی پیایش زیر به فعال سازی جاوا اسکریپت نیاز دارد.</p><p> برای عمل کردن این منو جاوا اسکریپت را فعال کنید.</p><p> برای دیدن گزینه های پیمایش بدون فعالسازی جاوا اسکریپت سی‌اس‌اس را غیر فعال کنید.</p>"
+msgid ""
+"<p>The Navigation Menu above requires JavaScript to function.</p><p>Enable "
+"JavaScript to allow the Navigation Menu to function.</p><p>Disable CSS to "
+"view the Navigation options without JavaScript enabled</p>"
+msgstr ""
+"<p> منوی پیایش زیر به فعال سازی جاوا اسکریپت نیاز دارد.</p><p> برای عمل کردن"
+" این منو جاوا اسکریپت را فعال کنید.</p><p> برای دیدن گزینه های پیمایش بدون "
+"فعالسازی جاوا اسکریپت سی‌اس‌اس را غیر فعال کنید.</p>"
 
 #: lib/Publican.pm:91
-msgid "A comma-separated list of XML attributes that are not permitted in the source."
+msgid ""
+"A comma-separated list of XML attributes that are not permitted in the "
+"source."
 msgstr ""
 
 #: lib/Publican.pm:97
-msgid "A comma-separated list of XML tags that are not permitted in the source."
+msgid ""
+"A comma-separated list of XML tags that are not permitted in the source."
 msgstr ""
 
 #: lib/Publican.pm:338
@@ -168,7 +183,11 @@ msgid "A comma-separated list of the formats to use for the web packages."
 msgstr ""
 
 #: lib/Publican/CreateBook.pm:258
-msgid "A short overview and summary of the book's subject and purpose, traditionally no more than one paragraph long. Note: the abstract will appear in the front matter of your book and will also be placed in the description field of the book's RPM spec file."
+msgid ""
+"A short overview and summary of the book's subject and purpose, "
+"traditionally no more than one paragraph long. Note: the abstract will "
+"appear in the front matter of your book and will also be placed in the "
+"description field of the book's RPM spec file."
 msgstr ""
 
 #: lib/Publican.pm:86
@@ -196,7 +215,9 @@ msgid "Add an entry to the revision history"
 msgstr ""
 
 #: bin/publican:276
-msgid "Add or remove database entries. Used for processing pre-build books, such as when building packages."
+msgid ""
+"Add or remove database entries. Used for processing pre-build books, such as"
+" when building packages."
 msgstr ""
 
 #. ($lang)
@@ -388,7 +409,9 @@ msgid "Code"
 msgstr "کد"
 
 #: bin/publican:108
-msgid "Comma-separated list of formats, for example: html,pdf,html-single,html-desktop,txt,epub"
+msgid ""
+"Comma-separated list of formats, for example: html,pdf,html-single,html-"
+"desktop,txt,epub"
 msgstr ""
 
 #: bin/publican:111
@@ -587,12 +610,16 @@ msgstr ""
 
 #. ($attr)
 #: lib/Publican/XmlClean.pm:667
-msgid "ERROR: Banned attribute (%1) detected. Discuss this with your brands owners if you think this is in error."
+msgid ""
+"ERROR: Banned attribute (%1) detected. Discuss this with your brands owners "
+"if you think this is in error."
 msgstr ""
 
 #. ($tag)
 #: lib/Publican/XmlClean.pm:656
-msgid "ERROR: Banned tag (%1) detected. Discuss this with your brands owners if you think this is in error."
+msgid ""
+"ERROR: Banned tag (%1) detected. Discuss this with your brands owners if you"
+" think this is in error."
 msgstr ""
 
 #: lib/Publican.pm:1171
@@ -667,15 +694,21 @@ msgid "FATAL ERROR: %1:%2 in %3 on line %4: %5"
 msgstr ""
 
 #: lib/Publican/XmlClean.pm:374
-msgid "FATAL ERROR: arch profiling would prune root node. Do NOT set arch in a root node."
+msgid ""
+"FATAL ERROR: arch profiling would prune root node. Do NOT set arch in a root"
+" node."
 msgstr ""
 
 #: lib/Publican/XmlClean.pm:395
-msgid "FATAL ERROR: condition profiling would prune root node. Do NOT set condition in a root node."
+msgid ""
+"FATAL ERROR: condition profiling would prune root node. Do NOT set condition"
+" in a root node."
 msgstr ""
 
 #: lib/Publican/XmlClean.pm:354
-msgid "FATAL ERROR: language profiling would prune root node. Do NOT set lang in a root node."
+msgid ""
+"FATAL ERROR: language profiling would prune root node. Do NOT set lang in a "
+"root node."
 msgstr ""
 
 #: lib/Publican/Builder.pm:1468
@@ -728,7 +761,8 @@ msgstr ""
 
 #. ($pot_file,$po_file)
 #: lib/Publican/Translate.pm:310
-msgid "Fatal Error: msgmerge failed to merge updates. POT File: %1. Po File: %2"
+msgid ""
+"Fatal Error: msgmerge failed to merge updates. POT File: %1. Po File: %2"
 msgstr ""
 
 #. ($book,$?)
@@ -769,7 +803,9 @@ msgid "For HTML, should the first section be on the same page as its parent?"
 msgstr ""
 
 #: lib/Publican.pm:130
-msgid "For HTML, what is the deepest level of nesting at which a section should be split onto its own page?"
+msgid ""
+"For HTML, what is the deepest level of nesting at which a section should be "
+"split onto its own page?"
 msgstr ""
 
 #: lib/Publican/WebSite.pm:123
@@ -777,7 +813,9 @@ msgid "Formats"
 msgstr ""
 
 #: lib/Publican.pm:394
-msgid "Full path for the publican site configuration file for non standard RPM websites."
+msgid ""
+"Full path for the publican site configuration file for non standard RPM "
+"websites."
 msgstr ""
 
 #: lib/Publican/Translate.pm:1096
@@ -915,7 +953,9 @@ msgid "Missing mandatory field '%1' in revision."
 msgstr ""
 
 #: lib/Publican.pm:1614
-msgid "NOTE: These lists of tags and attributes are brand specific and are not part of Publican itself."
+msgid ""
+"NOTE: These lists of tags and attributes are brand specific and are not part"
+" of Publican itself."
 msgstr ""
 
 #: lib/Publican/CreateBook.pm:232
@@ -923,11 +963,15 @@ msgid "NOTE: the href does not contain a language! This is CORRECT!"
 msgstr ""
 
 #: lib/Publican.pm:404
-msgid "Name of site package for non standard RPM websites. Required to ensure the site is installed."
+msgid ""
+"Name of site package for non standard RPM websites. Required to ensure the "
+"site is installed."
 msgstr ""
 
 #: lib/Publican.pm:171
-msgid "Name of this package. Fetched from title tag in xml_lang/TYPE_Info.xml if not set in cfg file."
+msgid ""
+"Name of this package. Fetched from title tag in xml_lang/TYPE_Info.xml if "
+"not set in cfg file."
 msgstr ""
 
 #: lib/Publican/TreeView.pm:274
@@ -974,7 +1018,8 @@ msgid "Override path to Common_Content directory"
 msgstr ""
 
 #: lib/Publican.pm:379
-msgid "Override the book name, bottom level, menu label on a Publican website."
+msgid ""
+"Override the book name, bottom level, menu label on a Publican website."
 msgstr ""
 
 #: lib/Publican.pm:420
@@ -994,7 +1039,9 @@ msgid "Override the default TOC path."
 msgstr ""
 
 #: lib/Publican.pm:372
-msgid "Override the default search form for a Publican website. By default this will use Google search and do a site search if web_host is set."
+msgid ""
+"Override the default search form for a Publican website. By default this "
+"will use Google search and do a site search if web_host is set."
 msgstr ""
 
 #: lib/Publican.pm:296
@@ -1010,7 +1057,9 @@ msgid "Override the product, top level, menu label on a Publican website."
 msgstr ""
 
 #: lib/Publican.pm:389
-msgid "Override the version, middle level, menu label on a Publican website. To hide this menu item set this to: UNUSED"
+msgid ""
+"Override the version, middle level, menu label on a Publican website. To "
+"hide this menu item set this to: UNUSED"
 msgstr ""
 
 #. ($po_file)
@@ -1095,7 +1144,9 @@ msgid "Product List"
 msgstr ""
 
 #: lib/Publican.pm:263
-msgid "Product this package covers. Fetched from productname tag in xml_lang/TYPE_Info.xml"
+msgid ""
+"Product this package covers. Fetched from productname tag in "
+"xml_lang/TYPE_Info.xml"
 msgstr ""
 
 #: lib/Publican.pm:1254
@@ -1112,7 +1163,9 @@ msgid "Push SRPM to brew"
 msgstr ""
 
 #: lib/Publican/Builder.pm:2051
-msgid "Reached the maximum page ordering weight(30) that drupal can support. The rest of the pages will be ordered in alphabetical order\n"
+msgid ""
+"Reached the maximum page ordering weight(30) that drupal can support. The "
+"rest of the pages will be ordered in alphabetical order\n"
 msgstr ""
 
 #: lib/Publican/Builder.pm:911
@@ -1171,7 +1224,8 @@ msgid "Run: '%1 <action> --help' for details on action usage"
 msgstr ""
 
 #: bin/publican:840
-msgid "Running clean process to ensure stale content is not bundled in packages."
+msgid ""
+"Running clean process to ensure stale content is not bundled in packages."
 msgstr ""
 
 #: lib/Publican/Builder.pm:3475
@@ -1197,7 +1251,9 @@ msgid "Setting up %1"
 msgstr ""
 
 #: lib/Publican/Builder.pm:2891
-msgid "Short-sighted packages can only be used to make desktop rpms. Add --desktop to your argument list."
+msgid ""
+"Short-sighted packages can only be used to make desktop rpms. Add --desktop "
+"to your argument list."
 msgstr ""
 
 #: lib/Publican/WebSite.pm:122
@@ -1218,7 +1274,9 @@ msgid "Space-separated list of packages the desktop package requires."
 msgstr ""
 
 #: lib/Publican.pm:351
-msgid "Splash pages should be generated to be compatible with this web style. Valid values are 1 and 2."
+msgid ""
+"Splash pages should be generated to be compatible with this web style. Valid"
+" values are 1 and 2."
 msgstr ""
 
 #. ($book)
@@ -1257,15 +1315,21 @@ msgstr ""
 
 # translation auto-copied from project Publican, version 3, document publican
 #: lib/Publican/WebSite.pm:98
-msgid "The Navigation Menu below will automatically collapse when pages are loaded. Enable cookies to fix the Navigation Menu functionality."
-msgstr "منو پیمایش زیر به طور خودکار وقتی که صفحه ها بارگذاری شدند باز خواهند شد. برای اصلاح این علمکرد منو کوکی ها را فعال کنید."
+msgid ""
+"The Navigation Menu below will automatically collapse when pages are loaded."
+" Enable cookies to fix the Navigation Menu functionality."
+msgstr ""
+"منو پیمایش زیر به طور خودکار وقتی که صفحه ها بارگذاری شدند باز خواهند شد. "
+"برای اصلاح این علمکرد منو کوکی ها را فعال کنید."
 
 #: lib/Publican.pm:260
 msgid "The OS for which to build packages."
 msgstr ""
 
 #: lib/Publican.pm:414
-msgid "The author name to be shown in drupal book page. It must be a valid drupal username."
+msgid ""
+"The author name to be shown in drupal book page. It must be a valid drupal "
+"username."
 msgstr ""
 
 #: lib/Publican.pm:102
@@ -1289,7 +1353,9 @@ msgid "The brew dist to use for building the web rpm."
 msgstr ""
 
 #: lib/Publican.pm:431
-msgid "The directory where the image should be stored in drupal server. The default is \"sites/default/files/\""
+msgid ""
+"The directory where the image should be stored in drupal server. The default"
+" is \"sites/default/files/\""
 msgstr ""
 
 #: bin/publican:116
@@ -1301,7 +1367,8 @@ msgid "The language the XML will be written in"
 msgstr ""
 
 #: lib/Publican.pm:425
-msgid "The menu where we can find the book. The default value is menu-user-guide"
+msgid ""
+"The menu where we can find the book. The default value is menu-user-guide"
 msgstr ""
 
 #: bin/publican:114
@@ -1309,7 +1376,9 @@ msgid "The name of the book, article, set, or brand"
 msgstr ""
 
 #: lib/Publican.pm:246
-msgid "The name of the main xml and ent files for this book, sans file extension and language. Fetched from docname if not set."
+msgid ""
+"The name of the main xml and ent files for this book, sans file extension "
+"and language. Fetched from docname if not set."
 msgstr ""
 
 #: bin/publican:117
@@ -1329,19 +1398,29 @@ msgid "The version of the product"
 msgstr ""
 
 #: bin/publican:127
-msgid "This flag tells publican the data being processed is a distributed set. Note: do not use distributed_set on the command line. Publican uses this flag when calling itself to process distributed sets. This is the only safe way this flag can be used."
+msgid ""
+"This flag tells publican the data being processed is a distributed set. "
+"Note: do not use distributed_set on the command line. Publican uses this "
+"flag when calling itself to process distributed sets. This is the only safe "
+"way this flag can be used."
 msgstr ""
 
 #: lib/Publican.pm:344
-msgid "This is a home page for a Publican-generated website, not a standard book."
+msgid ""
+"This is a home page for a Publican-generated website, not a standard book."
 msgstr ""
 
 #: lib/Publican.pm:363
-msgid "This is a host name for a Publican-generated website, used for searches and the Sitemap. Be sure to include the full path to your document tree. E.g. if your documents are in the docs directory: http://www.example.com/docs"
+msgid ""
+"This is a host name for a Publican-generated website, used for searches and "
+"the Sitemap. Be sure to include the full path to your document tree. E.g. if"
+" your documents are in the docs directory: http://www.example.com/docs"
 msgstr ""
 
 #: lib/Publican.pm:358
-msgid "This is a special page for a Publican-generated website, not a standard book. Valid types are home, product, and version."
+msgid ""
+"This is a special page for a Publican-generated website, not a standard "
+"book. Valid types are home, product, and version."
 msgstr ""
 
 #: lib/Publican/CreateBook.pm:346
@@ -1362,13 +1441,19 @@ msgstr ""
 
 # translation auto-copied from project Publican, version 3, document publican
 #: lib/Publican/WebSite.pm:104
-msgid "This is an iframe, to view it upgrade your browser or enable iframe display."
-msgstr "این یک آی‌فریم است برای دیدن آن مرورگر خود را به روز کرده یا نمایش آی‌فریم را فعال کنید."
+msgid ""
+"This is an iframe, to view it upgrade your browser or enable iframe display."
+msgstr ""
+"این یک آی‌فریم است برای دیدن آن مرورگر خود را به روز کرده یا نمایش آی‌فریم "
+"را فعال کنید."
 
 # translation auto-copied from project Publican, version 3, document publican
 #: lib/Publican/WebSite.pm:115
-msgid "This web site requires JavaScript and cookies to be enabled to function correctly."
-msgstr "این وب سایت برای کارایی درست به فعالسازی جاوا اسکریپت و کوکی ها نیاز دارد."
+msgid ""
+"This web site requires JavaScript and cookies to be enabled to function "
+"correctly."
+msgstr ""
+"این وب سایت برای کارایی درست به فعالسازی جاوا اسکریپت و کوکی ها نیاز دارد."
 
 # translation auto-copied from project Publican, version 3, document publican
 #: lib/Publican/WebSite.pm:111
@@ -1386,7 +1471,8 @@ msgid "Total for %1"
 msgstr ""
 
 #: bin/publican:173
-msgid "Transform XML to other formats (pdf, html, html-single, drupal-book, etc)"
+msgid ""
+"Transform XML to other formats (pdf, html, html-single, drupal-book, etc)"
 msgstr ""
 
 #. ($!,$@)
@@ -1408,15 +1494,20 @@ msgid "Translator"
 msgstr "مترجم"
 
 #: lib/Publican.pm:315
-msgid "Type of content this package contains. Supported: set, book, article, brand"
+msgid ""
+"Type of content this package contains. Supported: set, book, article, brand"
 msgstr ""
 
 #: lib/Publican.pm:279
-msgid "Type of repository in which books that form part of a remote set are stored. Supported types: SVN."
+msgid ""
+"Type of repository in which books that form part of a remote set are stored."
+" Supported types: SVN."
 msgstr ""
 
 #: lib/Publican.pm:178
-msgid "URL for the documentation team for this package. Used for top right URL on HTML."
+msgid ""
+"URL for the documentation team for this package. Used for top right URL on "
+"HTML."
 msgstr ""
 
 #: lib/Publican.pm:270
@@ -1486,7 +1577,9 @@ msgid "Version of the DocBook DTD on which this project is based."
 msgstr ""
 
 #: lib/Publican.pm:328
-msgid "Version of this package. Fetched from productnumber tag in xml_lang/TYPE_Info.xml"
+msgid ""
+"Version of this package. Fetched from productnumber tag in "
+"xml_lang/TYPE_Info.xml"
 msgstr ""
 
 # translation auto-copied from project Publican, version 3, document publican
@@ -1514,7 +1607,9 @@ msgid "WARNING: Image missing: %1"
 msgstr ""
 
 #: lib/Publican/Translate.pm:844
-msgid "WARNING: Message missing from PO file, consider updating your POT and PO files."
+msgid ""
+"WARNING: Message missing from PO file, consider updating your POT and PO "
+"files."
 msgstr ""
 
 #. ($pot_file)
@@ -1537,11 +1632,15 @@ msgid "WARNING: Unknow config key %1, ignoring.\n"
 msgstr ""
 
 #: lib/Publican/Builder.pm:3123
-msgid "WARNING: You can not create RPM packages with a blank abstract. Skipping RPM creation.\n"
+msgid ""
+"WARNING: You can not create RPM packages with a blank abstract. Skipping RPM"
+" creation.\n"
 msgstr ""
 
 #: lib/Publican/Builder.pm:3133
-msgid "WARNING: You can not create RPM packages with a blank subtitle. Skipping RPM creation.\n"
+msgid ""
+"WARNING: You can not create RPM packages with a blank subtitle. Skipping RPM"
+" creation.\n"
 msgstr ""
 
 #. ($key)
@@ -1550,7 +1649,9 @@ msgid "WARNING: config key %1 is not valid for this type of object, ignoring.\n"
 msgstr ""
 
 #: lib/Publican/XmlClean.pm:927
-msgid "WARNING: table validation failed. Could not determine table for tgroup, column numbers cannot be validated"
+msgid ""
+"WARNING: table validation failed. Could not determine table for tgroup, "
+"column numbers cannot be validated"
 msgstr ""
 
 #: bin/publican:103
