--- a/publican/po/nl.po
+++ b/publican/po/nl.po
@@ -55,7 +55,8 @@ msgstr ""
 
 #. ('db_file',$site_config)
 #: lib/Publican/WebSite.pm:152
-msgid "%1 is a mandatory field in a site configuration file. Check %2 for validity."
+msgid ""
+"%1 is a mandatory field in a site configuration file. Check %2 for validity."
 msgstr ""
 
 #. ('cmd')
@@ -94,7 +95,9 @@ msgstr ""
 
 #. ($language)
 #: lib/Publican/Builder.pm:2316
-msgid "'%1' is not a valid language for highlighting. Language names are case sensitive."
+msgid ""
+"'%1' is not a valid language for highlighting. Language names are case "
+"sensitive."
 msgstr ""
 
 #: lib/Publican/Builder.pm:2400 lib/Publican/Builder.pm:2415
@@ -141,7 +144,10 @@ msgstr ""
 
 #. ($tag)
 #: lib/Publican/XmlClean.pm:678
-msgid "*WARNING: Unvalidated tag: '%1'. This tag may not be displayed correctly, may generate invalid xhtml, or may breach Section 508 Accessibility standards."
+msgid ""
+"*WARNING: Unvalidated tag: '%1'. This tag may not be displayed correctly, "
+"may generate invalid xhtml, or may breach Section 508 Accessibility "
+"standards."
 msgstr ""
 
 #: bin/publican:125
@@ -150,15 +156,25 @@ msgstr ""
 
 # translation auto-copied from project Publican, version 3, document publican
 #: lib/Publican/WebSite.pm:101
-msgid "<p>The Navigation Menu above requires JavaScript to function.</p><p>Enable JavaScript to allow the Navigation Menu to function.</p><p>Disable CSS to view the Navigation options without JavaScript enabled</p>"
-msgstr "<p>Het navigatie menu hierboven vereist JavaScript functionaliteit.</p><p>Zet JavaScript aan om het navigatie menu te laten werken.</p><p>Zet CSS uit om de navigatie opties te tonen zonder dat JavaScript aangezet is</p>"
+msgid ""
+"<p>The Navigation Menu above requires JavaScript to function.</p><p>Enable "
+"JavaScript to allow the Navigation Menu to function.</p><p>Disable CSS to "
+"view the Navigation options without JavaScript enabled</p>"
+msgstr ""
+"<p>Het navigatie menu hierboven vereist JavaScript "
+"functionaliteit.</p><p>Zet JavaScript aan om het navigatie menu te laten "
+"werken.</p><p>Zet CSS uit om de navigatie opties te tonen zonder dat "
+"JavaScript aangezet is</p>"
 
 #: lib/Publican.pm:91
-msgid "A comma-separated list of XML attributes that are not permitted in the source."
+msgid ""
+"A comma-separated list of XML attributes that are not permitted in the "
+"source."
 msgstr ""
 
 #: lib/Publican.pm:97
-msgid "A comma-separated list of XML tags that are not permitted in the source."
+msgid ""
+"A comma-separated list of XML tags that are not permitted in the source."
 msgstr ""
 
 #: lib/Publican.pm:338
@@ -166,7 +182,11 @@ msgid "A comma-separated list of the formats to use for the web packages."
 msgstr ""
 
 #: lib/Publican/CreateBook.pm:258
-msgid "A short overview and summary of the book's subject and purpose, traditionally no more than one paragraph long. Note: the abstract will appear in the front matter of your book and will also be placed in the description field of the book's RPM spec file."
+msgid ""
+"A short overview and summary of the book's subject and purpose, "
+"traditionally no more than one paragraph long. Note: the abstract will "
+"appear in the front matter of your book and will also be placed in the "
+"description field of the book's RPM spec file."
 msgstr ""
 
 #: lib/Publican.pm:86
@@ -194,7 +214,9 @@ msgid "Add an entry to the revision history"
 msgstr ""
 
 #: bin/publican:276
-msgid "Add or remove database entries. Used for processing pre-build books, such as when building packages."
+msgid ""
+"Add or remove database entries. Used for processing pre-build books, such as"
+" when building packages."
 msgstr ""
 
 #. ($lang)
@@ -385,7 +407,9 @@ msgid "Code"
 msgstr "Code"
 
 #: bin/publican:108
-msgid "Comma-separated list of formats, for example: html,pdf,html-single,html-desktop,txt,epub"
+msgid ""
+"Comma-separated list of formats, for example: html,pdf,html-single,html-"
+"desktop,txt,epub"
 msgstr ""
 
 #: bin/publican:111
@@ -584,12 +608,16 @@ msgstr ""
 
 #. ($attr)
 #: lib/Publican/XmlClean.pm:667
-msgid "ERROR: Banned attribute (%1) detected. Discuss this with your brands owners if you think this is in error."
+msgid ""
+"ERROR: Banned attribute (%1) detected. Discuss this with your brands owners "
+"if you think this is in error."
 msgstr ""
 
 #. ($tag)
 #: lib/Publican/XmlClean.pm:656
-msgid "ERROR: Banned tag (%1) detected. Discuss this with your brands owners if you think this is in error."
+msgid ""
+"ERROR: Banned tag (%1) detected. Discuss this with your brands owners if you"
+" think this is in error."
 msgstr ""
 
 #: lib/Publican.pm:1171
@@ -664,15 +692,21 @@ msgid "FATAL ERROR: %1:%2 in %3 on line %4: %5"
 msgstr ""
 
 #: lib/Publican/XmlClean.pm:374
-msgid "FATAL ERROR: arch profiling would prune root node. Do NOT set arch in a root node."
+msgid ""
+"FATAL ERROR: arch profiling would prune root node. Do NOT set arch in a root"
+" node."
 msgstr ""
 
 #: lib/Publican/XmlClean.pm:395
-msgid "FATAL ERROR: condition profiling would prune root node. Do NOT set condition in a root node."
+msgid ""
+"FATAL ERROR: condition profiling would prune root node. Do NOT set condition"
+" in a root node."
 msgstr ""
 
 #: lib/Publican/XmlClean.pm:354
-msgid "FATAL ERROR: language profiling would prune root node. Do NOT set lang in a root node."
+msgid ""
+"FATAL ERROR: language profiling would prune root node. Do NOT set lang in a "
+"root node."
 msgstr ""
 
 #: lib/Publican/Builder.pm:1468
@@ -725,7 +759,8 @@ msgstr ""
 
 #. ($pot_file,$po_file)
 #: lib/Publican/Translate.pm:310
-msgid "Fatal Error: msgmerge failed to merge updates. POT File: %1. Po File: %2"
+msgid ""
+"Fatal Error: msgmerge failed to merge updates. POT File: %1. Po File: %2"
 msgstr ""
 
 #. ($book,$?)
@@ -766,7 +801,9 @@ msgid "For HTML, should the first section be on the same page as its parent?"
 msgstr ""
 
 #: lib/Publican.pm:130
-msgid "For HTML, what is the deepest level of nesting at which a section should be split onto its own page?"
+msgid ""
+"For HTML, what is the deepest level of nesting at which a section should be "
+"split onto its own page?"
 msgstr ""
 
 #: lib/Publican/WebSite.pm:123
@@ -774,7 +811,9 @@ msgid "Formats"
 msgstr ""
 
 #: lib/Publican.pm:394
-msgid "Full path for the publican site configuration file for non standard RPM websites."
+msgid ""
+"Full path for the publican site configuration file for non standard RPM "
+"websites."
 msgstr ""
 
 #: lib/Publican/Translate.pm:1096
@@ -912,7 +951,9 @@ msgid "Missing mandatory field '%1' in revision."
 msgstr ""
 
 #: lib/Publican.pm:1614
-msgid "NOTE: These lists of tags and attributes are brand specific and are not part of Publican itself."
+msgid ""
+"NOTE: These lists of tags and attributes are brand specific and are not part"
+" of Publican itself."
 msgstr ""
 
 #: lib/Publican/CreateBook.pm:232
@@ -920,11 +961,15 @@ msgid "NOTE: the href does not contain a language! This is CORRECT!"
 msgstr ""
 
 #: lib/Publican.pm:404
-msgid "Name of site package for non standard RPM websites. Required to ensure the site is installed."
+msgid ""
+"Name of site package for non standard RPM websites. Required to ensure the "
+"site is installed."
 msgstr ""
 
 #: lib/Publican.pm:171
-msgid "Name of this package. Fetched from title tag in xml_lang/TYPE_Info.xml if not set in cfg file."
+msgid ""
+"Name of this package. Fetched from title tag in xml_lang/TYPE_Info.xml if "
+"not set in cfg file."
 msgstr ""
 
 #: lib/Publican/TreeView.pm:274
@@ -971,7 +1016,8 @@ msgid "Override path to Common_Content directory"
 msgstr ""
 
 #: lib/Publican.pm:379
-msgid "Override the book name, bottom level, menu label on a Publican website."
+msgid ""
+"Override the book name, bottom level, menu label on a Publican website."
 msgstr ""
 
 #: lib/Publican.pm:420
@@ -991,7 +1037,9 @@ msgid "Override the default TOC path."
 msgstr ""
 
 #: lib/Publican.pm:372
-msgid "Override the default search form for a Publican website. By default this will use Google search and do a site search if web_host is set."
+msgid ""
+"Override the default search form for a Publican website. By default this "
+"will use Google search and do a site search if web_host is set."
 msgstr ""
 
 #: lib/Publican.pm:296
@@ -1007,7 +1055,9 @@ msgid "Override the product, top level, menu label on a Publican website."
 msgstr ""
 
 #: lib/Publican.pm:389
-msgid "Override the version, middle level, menu label on a Publican website. To hide this menu item set this to: UNUSED"
+msgid ""
+"Override the version, middle level, menu label on a Publican website. To "
+"hide this menu item set this to: UNUSED"
 msgstr ""
 
 #. ($po_file)
@@ -1092,7 +1142,9 @@ msgid "Product List"
 msgstr ""
 
 #: lib/Publican.pm:263
-msgid "Product this package covers. Fetched from productname tag in xml_lang/TYPE_Info.xml"
+msgid ""
+"Product this package covers. Fetched from productname tag in "
+"xml_lang/TYPE_Info.xml"
 msgstr ""
 
 #: lib/Publican.pm:1254
@@ -1109,7 +1161,9 @@ msgid "Push SRPM to brew"
 msgstr ""
 
 #: lib/Publican/Builder.pm:2051
-msgid "Reached the maximum page ordering weight(30) that drupal can support. The rest of the pages will be ordered in alphabetical order\n"
+msgid ""
+"Reached the maximum page ordering weight(30) that drupal can support. The "
+"rest of the pages will be ordered in alphabetical order\n"
 msgstr ""
 
 #: lib/Publican/Builder.pm:911
@@ -1168,7 +1222,8 @@ msgid "Run: '%1 <action> --help' for details on action usage"
 msgstr ""
 
 #: bin/publican:840
-msgid "Running clean process to ensure stale content is not bundled in packages."
+msgid ""
+"Running clean process to ensure stale content is not bundled in packages."
 msgstr ""
 
 #: lib/Publican/Builder.pm:3475
@@ -1193,7 +1248,9 @@ msgid "Setting up %1"
 msgstr ""
 
 #: lib/Publican/Builder.pm:2891
-msgid "Short-sighted packages can only be used to make desktop rpms. Add --desktop to your argument list."
+msgid ""
+"Short-sighted packages can only be used to make desktop rpms. Add --desktop "
+"to your argument list."
 msgstr ""
 
 #: lib/Publican/WebSite.pm:122
@@ -1214,7 +1271,9 @@ msgid "Space-separated list of packages the desktop package requires."
 msgstr ""
 
 #: lib/Publican.pm:351
-msgid "Splash pages should be generated to be compatible with this web style. Valid values are 1 and 2."
+msgid ""
+"Splash pages should be generated to be compatible with this web style. Valid"
+" values are 1 and 2."
 msgstr ""
 
 #. ($book)
@@ -1253,15 +1312,22 @@ msgstr ""
 
 # translation auto-copied from project Publican, version 3, document publican
 #: lib/Publican/WebSite.pm:98
-msgid "The Navigation Menu below will automatically collapse when pages are loaded. Enable cookies to fix the Navigation Menu functionality."
-msgstr "Het navigatie menu hieronder zal automatisch samenvouwen als pagina's worden geladen. Zet cookies aan om de functionaliteit van het navigatie menu te herstellen."
+msgid ""
+"The Navigation Menu below will automatically collapse when pages are loaded."
+" Enable cookies to fix the Navigation Menu functionality."
+msgstr ""
+"Het navigatie menu hieronder zal automatisch samenvouwen als pagina's worden"
+" geladen. Zet cookies aan om de functionaliteit van het navigatie menu te "
+"herstellen."
 
 #: lib/Publican.pm:260
 msgid "The OS for which to build packages."
 msgstr ""
 
 #: lib/Publican.pm:414
-msgid "The author name to be shown in drupal book page. It must be a valid drupal username."
+msgid ""
+"The author name to be shown in drupal book page. It must be a valid drupal "
+"username."
 msgstr ""
 
 #: lib/Publican.pm:102
@@ -1285,7 +1351,9 @@ msgid "The brew dist to use for building the web rpm."
 msgstr ""
 
 #: lib/Publican.pm:431
-msgid "The directory where the image should be stored in drupal server. The default is \"sites/default/files/\""
+msgid ""
+"The directory where the image should be stored in drupal server. The default"
+" is \"sites/default/files/\""
 msgstr ""
 
 #: bin/publican:116
@@ -1297,7 +1365,8 @@ msgid "The language the XML will be written in"
 msgstr ""
 
 #: lib/Publican.pm:425
-msgid "The menu where we can find the book. The default value is menu-user-guide"
+msgid ""
+"The menu where we can find the book. The default value is menu-user-guide"
 msgstr ""
 
 #: bin/publican:114
@@ -1305,7 +1374,9 @@ msgid "The name of the book, article, set, or brand"
 msgstr ""
 
 #: lib/Publican.pm:246
-msgid "The name of the main xml and ent files for this book, sans file extension and language. Fetched from docname if not set."
+msgid ""
+"The name of the main xml and ent files for this book, sans file extension "
+"and language. Fetched from docname if not set."
 msgstr ""
 
 #: bin/publican:117
@@ -1325,19 +1396,29 @@ msgid "The version of the product"
 msgstr ""
 
 #: bin/publican:127
-msgid "This flag tells publican the data being processed is a distributed set. Note: do not use distributed_set on the command line. Publican uses this flag when calling itself to process distributed sets. This is the only safe way this flag can be used."
+msgid ""
+"This flag tells publican the data being processed is a distributed set. "
+"Note: do not use distributed_set on the command line. Publican uses this "
+"flag when calling itself to process distributed sets. This is the only safe "
+"way this flag can be used."
 msgstr ""
 
 #: lib/Publican.pm:344
-msgid "This is a home page for a Publican-generated website, not a standard book."
+msgid ""
+"This is a home page for a Publican-generated website, not a standard book."
 msgstr ""
 
 #: lib/Publican.pm:363
-msgid "This is a host name for a Publican-generated website, used for searches and the Sitemap. Be sure to include the full path to your document tree. E.g. if your documents are in the docs directory: http://www.example.com/docs"
+msgid ""
+"This is a host name for a Publican-generated website, used for searches and "
+"the Sitemap. Be sure to include the full path to your document tree. E.g. if"
+" your documents are in the docs directory: http://www.example.com/docs"
 msgstr ""
 
 #: lib/Publican.pm:358
-msgid "This is a special page for a Publican-generated website, not a standard book. Valid types are home, product, and version."
+msgid ""
+"This is a special page for a Publican-generated website, not a standard "
+"book. Valid types are home, product, and version."
 msgstr ""
 
 #: lib/Publican/CreateBook.pm:346
@@ -1358,11 +1439,16 @@ msgstr ""
 
 # translation auto-copied from project Publican, version 3, document publican
 #: lib/Publican/WebSite.pm:104
-msgid "This is an iframe, to view it upgrade your browser or enable iframe display."
-msgstr "Dit is een iframe, om het te bekijken upgrade je jouw browser of zet je iframe weergave aan."
+msgid ""
+"This is an iframe, to view it upgrade your browser or enable iframe display."
+msgstr ""
+"Dit is een iframe, om het te bekijken upgrade je jouw browser of zet je "
+"iframe weergave aan."
 
 #: lib/Publican/WebSite.pm:115
-msgid "This web site requires JavaScript and cookies to be enabled to function correctly."
+msgid ""
+"This web site requires JavaScript and cookies to be enabled to function "
+"correctly."
 msgstr ""
 
 # translation auto-copied from project Publican, version 3, document publican
@@ -1381,7 +1467,8 @@ msgid "Total for %1"
 msgstr ""
 
 #: bin/publican:173
-msgid "Transform XML to other formats (pdf, html, html-single, drupal-book, etc)"
+msgid ""
+"Transform XML to other formats (pdf, html, html-single, drupal-book, etc)"
 msgstr ""
 
 #. ($!,$@)
@@ -1403,15 +1490,20 @@ msgid "Translator"
 msgstr "Vertaler"
 
 #: lib/Publican.pm:315
-msgid "Type of content this package contains. Supported: set, book, article, brand"
+msgid ""
+"Type of content this package contains. Supported: set, book, article, brand"
 msgstr ""
 
 #: lib/Publican.pm:279
-msgid "Type of repository in which books that form part of a remote set are stored. Supported types: SVN."
+msgid ""
+"Type of repository in which books that form part of a remote set are stored."
+" Supported types: SVN."
 msgstr ""
 
 #: lib/Publican.pm:178
-msgid "URL for the documentation team for this package. Used for top right URL on HTML."
+msgid ""
+"URL for the documentation team for this package. Used for top right URL on "
+"HTML."
 msgstr ""
 
 #: lib/Publican.pm:270
@@ -1481,7 +1573,9 @@ msgid "Version of the DocBook DTD on which this project is based."
 msgstr ""
 
 #: lib/Publican.pm:328
-msgid "Version of this package. Fetched from productnumber tag in xml_lang/TYPE_Info.xml"
+msgid ""
+"Version of this package. Fetched from productnumber tag in "
+"xml_lang/TYPE_Info.xml"
 msgstr ""
 
 # translation auto-copied from project Publican, version 3, document publican
@@ -1509,7 +1603,9 @@ msgid "WARNING: Image missing: %1"
 msgstr ""
 
 #: lib/Publican/Translate.pm:844
-msgid "WARNING: Message missing from PO file, consider updating your POT and PO files."
+msgid ""
+"WARNING: Message missing from PO file, consider updating your POT and PO "
+"files."
 msgstr ""
 
 #. ($pot_file)
@@ -1532,11 +1628,15 @@ msgid "WARNING: Unknow config key %1, ignoring.\n"
 msgstr ""
 
 #: lib/Publican/Builder.pm:3123
-msgid "WARNING: You can not create RPM packages with a blank abstract. Skipping RPM creation.\n"
+msgid ""
+"WARNING: You can not create RPM packages with a blank abstract. Skipping RPM"
+" creation.\n"
 msgstr ""
 
 #: lib/Publican/Builder.pm:3133
-msgid "WARNING: You can not create RPM packages with a blank subtitle. Skipping RPM creation.\n"
+msgid ""
+"WARNING: You can not create RPM packages with a blank subtitle. Skipping RPM"
+" creation.\n"
 msgstr ""
 
 #. ($key)
@@ -1545,7 +1645,9 @@ msgid "WARNING: config key %1 is not valid for this type of object, ignoring.\n"
 msgstr ""
 
 #: lib/Publican/XmlClean.pm:927
-msgid "WARNING: table validation failed. Could not determine table for tgroup, column numbers cannot be validated"
+msgid ""
+"WARNING: table validation failed. Could not determine table for tgroup, "
+"column numbers cannot be validated"
 msgstr ""
 
 #: bin/publican:103
