--- a/publican/po/pt_BR.po
+++ b/publican/po/pt_BR.po
@@ -2,12 +2,13 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# gcintra <gcintra@fedoraproject.org>, 2013. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: \n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2013-03-06 01:25-0500\n"
+"Last-Translator: gcintra <gcintra@fedoraproject.org>\n"
 "Language-Team: Portuguese (Brazil)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,42 +22,47 @@ msgid ""
 "\n"
 "No unused XML files"
 msgstr ""
+"\n"
+"Nenhum arquivo XML sem uso"
 
 #: bin/publican:588
 msgid "$ cd path/to/brand"
-msgstr ""
+msgstr "$ cd path/to/brand"
 
 #: bin/publican:589
 msgid "$ publican build --formats=xml --langs=all --publish"
-msgstr ""
+msgstr "$ publican build --formats=xml --langs=all --publish"
 
 #: bin/publican:594
 msgid "$ publican install_brand --web --path=/path/to/site/%{brand}"
-msgstr ""
+msgstr "$ publican install_brand --web --path=/path/to/site/%{brand}"
 
 #: bin/publican:598
 msgid "$ publican update_site --site_config /path/to/site/config"
-msgstr ""
+msgstr "$ publican update_site --site_config /path/to/site/config"
 
 #. ($rpmbuild,WTERMSIG($?))
 #: lib/Publican/Builder.pm:2848
 msgid "%1 died with signal %2"
-msgstr ""
+msgstr "%1 desconectou com sinal %2"
 
 #. ($rpmbuild,WEXITSTATUS($?))
 #: lib/Publican/Builder.pm:2853
 msgid "%1 exited with value %2"
-msgstr ""
+msgstr "%1 saída com valor %2"
 
 #. ('toc_path')
 #: lib/Publican/WebSite.pm:144
 msgid "%1 is a mandatory field in a site configuration file"
-msgstr ""
+msgstr "%1 é um campo obrigatório em um arquivo de configuração do site"
 
 #. ('db_file',$site_config)
 #: lib/Publican/WebSite.pm:152
-msgid "%1 is a mandatory field in a site configuration file. Check %2 for validity."
+msgid ""
+"%1 is a mandatory field in a site configuration file. Check %2 for validity."
 msgstr ""
+"%1é um campo obrigatório no arquivo de configuração do site. Veja %2 para "
+"validade."
 
 #. ('cmd')
 #. ('site_config')
@@ -75,7 +81,7 @@ msgstr ""
 #: bin/publican:634 bin/publican:637 bin/publican:639 bin/publican:646
 #: bin/publican:648 bin/publican:753
 msgid "%1 is a required argument"
-msgstr ""
+msgstr "%1 é um argumento obrigatório"
 
 #. ('members')
 #. ('firstname')
@@ -94,7 +100,9 @@ msgstr ""
 
 #. ($language)
 #: lib/Publican/Builder.pm:2316
-msgid "'%1' is not a valid language for highlighting. Language names are case sensitive."
+msgid ""
+"'%1' is not a valid language for highlighting. Language names are case "
+"sensitive."
 msgstr ""
 
 #: lib/Publican/Builder.pm:2400 lib/Publican/Builder.pm:2415
@@ -141,7 +149,10 @@ msgstr ""
 
 #. ($tag)
 #: lib/Publican/XmlClean.pm:678
-msgid "*WARNING: Unvalidated tag: '%1'. This tag may not be displayed correctly, may generate invalid xhtml, or may breach Section 508 Accessibility standards."
+msgid ""
+"*WARNING: Unvalidated tag: '%1'. This tag may not be displayed correctly, "
+"may generate invalid xhtml, or may breach Section 508 Accessibility "
+"standards."
 msgstr ""
 
 #: bin/publican:125
@@ -149,15 +160,21 @@ msgid "/path/to/install/to"
 msgstr ""
 
 #: lib/Publican/WebSite.pm:101
-msgid "<p>The Navigation Menu above requires JavaScript to function.</p><p>Enable JavaScript to allow the Navigation Menu to function.</p><p>Disable CSS to view the Navigation options without JavaScript enabled</p>"
+msgid ""
+"<p>The Navigation Menu above requires JavaScript to function.</p><p>Enable "
+"JavaScript to allow the Navigation Menu to function.</p><p>Disable CSS to "
+"view the Navigation options without JavaScript enabled</p>"
 msgstr ""
 
 #: lib/Publican.pm:91
-msgid "A comma-separated list of XML attributes that are not permitted in the source."
+msgid ""
+"A comma-separated list of XML attributes that are not permitted in the "
+"source."
 msgstr ""
 
 #: lib/Publican.pm:97
-msgid "A comma-separated list of XML tags that are not permitted in the source."
+msgid ""
+"A comma-separated list of XML tags that are not permitted in the source."
 msgstr ""
 
 #: lib/Publican.pm:338
@@ -165,7 +182,11 @@ msgid "A comma-separated list of the formats to use for the web packages."
 msgstr ""
 
 #: lib/Publican/CreateBook.pm:258
-msgid "A short overview and summary of the book's subject and purpose, traditionally no more than one paragraph long. Note: the abstract will appear in the front matter of your book and will also be placed in the description field of the book's RPM spec file."
+msgid ""
+"A short overview and summary of the book's subject and purpose, "
+"traditionally no more than one paragraph long. Note: the abstract will "
+"appear in the front matter of your book and will also be placed in the "
+"description field of the book's RPM spec file."
 msgstr ""
 
 #: lib/Publican.pm:86
@@ -193,7 +214,9 @@ msgid "Add an entry to the revision history"
 msgstr ""
 
 #: bin/publican:276
-msgid "Add or remove database entries. Used for processing pre-build books, such as when building packages."
+msgid ""
+"Add or remove database entries. Used for processing pre-build books, such as"
+" when building packages."
 msgstr ""
 
 #. ($lang)
@@ -382,7 +405,9 @@ msgid "Code"
 msgstr ""
 
 #: bin/publican:108
-msgid "Comma-separated list of formats, for example: html,pdf,html-single,html-desktop,txt,epub"
+msgid ""
+"Comma-separated list of formats, for example: html,pdf,html-single,html-"
+"desktop,txt,epub"
 msgstr ""
 
 #: bin/publican:111
@@ -581,12 +606,16 @@ msgstr ""
 
 #. ($attr)
 #: lib/Publican/XmlClean.pm:667
-msgid "ERROR: Banned attribute (%1) detected. Discuss this with your brands owners if you think this is in error."
+msgid ""
+"ERROR: Banned attribute (%1) detected. Discuss this with your brands owners "
+"if you think this is in error."
 msgstr ""
 
 #. ($tag)
 #: lib/Publican/XmlClean.pm:656
-msgid "ERROR: Banned tag (%1) detected. Discuss this with your brands owners if you think this is in error."
+msgid ""
+"ERROR: Banned tag (%1) detected. Discuss this with your brands owners if you"
+" think this is in error."
 msgstr ""
 
 #: lib/Publican.pm:1171
@@ -661,15 +690,21 @@ msgid "FATAL ERROR: %1:%2 in %3 on line %4: %5"
 msgstr ""
 
 #: lib/Publican/XmlClean.pm:374
-msgid "FATAL ERROR: arch profiling would prune root node. Do NOT set arch in a root node."
+msgid ""
+"FATAL ERROR: arch profiling would prune root node. Do NOT set arch in a root"
+" node."
 msgstr ""
 
 #: lib/Publican/XmlClean.pm:395
-msgid "FATAL ERROR: condition profiling would prune root node. Do NOT set condition in a root node."
+msgid ""
+"FATAL ERROR: condition profiling would prune root node. Do NOT set condition"
+" in a root node."
 msgstr ""
 
 #: lib/Publican/XmlClean.pm:354
-msgid "FATAL ERROR: language profiling would prune root node. Do NOT set lang in a root node."
+msgid ""
+"FATAL ERROR: language profiling would prune root node. Do NOT set lang in a "
+"root node."
 msgstr ""
 
 #: lib/Publican/Builder.pm:1468
@@ -722,7 +757,8 @@ msgstr ""
 
 #. ($pot_file,$po_file)
 #: lib/Publican/Translate.pm:310
-msgid "Fatal Error: msgmerge failed to merge updates. POT File: %1. Po File: %2"
+msgid ""
+"Fatal Error: msgmerge failed to merge updates. POT File: %1. Po File: %2"
 msgstr ""
 
 #. ($book,$?)
@@ -763,7 +799,9 @@ msgid "For HTML, should the first section be on the same page as its parent?"
 msgstr ""
 
 #: lib/Publican.pm:130
-msgid "For HTML, what is the deepest level of nesting at which a section should be split onto its own page?"
+msgid ""
+"For HTML, what is the deepest level of nesting at which a section should be "
+"split onto its own page?"
 msgstr ""
 
 #: lib/Publican/WebSite.pm:123
@@ -771,7 +809,9 @@ msgid "Formats"
 msgstr ""
 
 #: lib/Publican.pm:394
-msgid "Full path for the publican site configuration file for non standard RPM websites."
+msgid ""
+"Full path for the publican site configuration file for non standard RPM "
+"websites."
 msgstr ""
 
 #: lib/Publican/Translate.pm:1096
@@ -850,7 +890,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1140
 msgid "Keywords"
-msgstr ""
+msgstr "Palavras Chave"
 
 #: lib/Publican/WebSite.pm:96
 msgid "Language"
@@ -908,7 +948,9 @@ msgid "Missing mandatory field '%1' in revision."
 msgstr ""
 
 #: lib/Publican.pm:1614
-msgid "NOTE: These lists of tags and attributes are brand specific and are not part of Publican itself."
+msgid ""
+"NOTE: These lists of tags and attributes are brand specific and are not part"
+" of Publican itself."
 msgstr ""
 
 #: lib/Publican/CreateBook.pm:232
@@ -916,11 +958,15 @@ msgid "NOTE: the href does not contain a language! This is CORRECT!"
 msgstr ""
 
 #: lib/Publican.pm:404
-msgid "Name of site package for non standard RPM websites. Required to ensure the site is installed."
+msgid ""
+"Name of site package for non standard RPM websites. Required to ensure the "
+"site is installed."
 msgstr ""
 
 #: lib/Publican.pm:171
-msgid "Name of this package. Fetched from title tag in xml_lang/TYPE_Info.xml if not set in cfg file."
+msgid ""
+"Name of this package. Fetched from title tag in xml_lang/TYPE_Info.xml if "
+"not set in cfg file."
 msgstr ""
 
 #: lib/Publican/TreeView.pm:274
@@ -967,7 +1013,8 @@ msgid "Override path to Common_Content directory"
 msgstr ""
 
 #: lib/Publican.pm:379
-msgid "Override the book name, bottom level, menu label on a Publican website."
+msgid ""
+"Override the book name, bottom level, menu label on a Publican website."
 msgstr ""
 
 #: lib/Publican.pm:420
@@ -987,7 +1034,9 @@ msgid "Override the default TOC path."
 msgstr ""
 
 #: lib/Publican.pm:372
-msgid "Override the default search form for a Publican website. By default this will use Google search and do a site search if web_host is set."
+msgid ""
+"Override the default search form for a Publican website. By default this "
+"will use Google search and do a site search if web_host is set."
 msgstr ""
 
 #: lib/Publican.pm:296
@@ -1003,7 +1052,9 @@ msgid "Override the product, top level, menu label on a Publican website."
 msgstr ""
 
 #: lib/Publican.pm:389
-msgid "Override the version, middle level, menu label on a Publican website. To hide this menu item set this to: UNUSED"
+msgid ""
+"Override the version, middle level, menu label on a Publican website. To "
+"hide this menu item set this to: UNUSED"
 msgstr ""
 
 #. ($po_file)
@@ -1087,7 +1138,9 @@ msgid "Product List"
 msgstr ""
 
 #: lib/Publican.pm:263
-msgid "Product this package covers. Fetched from productname tag in xml_lang/TYPE_Info.xml"
+msgid ""
+"Product this package covers. Fetched from productname tag in "
+"xml_lang/TYPE_Info.xml"
 msgstr ""
 
 #: lib/Publican.pm:1254
@@ -1103,7 +1156,9 @@ msgid "Push SRPM to brew"
 msgstr ""
 
 #: lib/Publican/Builder.pm:2051
-msgid "Reached the maximum page ordering weight(30) that drupal can support. The rest of the pages will be ordered in alphabetical order\n"
+msgid ""
+"Reached the maximum page ordering weight(30) that drupal can support. The "
+"rest of the pages will be ordered in alphabetical order\n"
 msgstr ""
 
 #: lib/Publican/Builder.pm:911
@@ -1162,7 +1217,8 @@ msgid "Run: '%1 <action> --help' for details on action usage"
 msgstr ""
 
 #: bin/publican:840
-msgid "Running clean process to ensure stale content is not bundled in packages."
+msgid ""
+"Running clean process to ensure stale content is not bundled in packages."
 msgstr ""
 
 #: lib/Publican/Builder.pm:3475
@@ -1187,7 +1243,9 @@ msgid "Setting up %1"
 msgstr ""
 
 #: lib/Publican/Builder.pm:2891
-msgid "Short-sighted packages can only be used to make desktop rpms. Add --desktop to your argument list."
+msgid ""
+"Short-sighted packages can only be used to make desktop rpms. Add --desktop "
+"to your argument list."
 msgstr ""
 
 #: lib/Publican/WebSite.pm:122
@@ -1208,7 +1266,9 @@ msgid "Space-separated list of packages the desktop package requires."
 msgstr ""
 
 #: lib/Publican.pm:351
-msgid "Splash pages should be generated to be compatible with this web style. Valid values are 1 and 2."
+msgid ""
+"Splash pages should be generated to be compatible with this web style. Valid"
+" values are 1 and 2."
 msgstr ""
 
 #. ($book)
@@ -1246,7 +1306,9 @@ msgid "Test Section 2"
 msgstr ""
 
 #: lib/Publican/WebSite.pm:98
-msgid "The Navigation Menu below will automatically collapse when pages are loaded. Enable cookies to fix the Navigation Menu functionality."
+msgid ""
+"The Navigation Menu below will automatically collapse when pages are loaded."
+" Enable cookies to fix the Navigation Menu functionality."
 msgstr ""
 
 #: lib/Publican.pm:260
@@ -1254,7 +1316,9 @@ msgid "The OS for which to build packages."
 msgstr ""
 
 #: lib/Publican.pm:414
-msgid "The author name to be shown in drupal book page. It must be a valid drupal username."
+msgid ""
+"The author name to be shown in drupal book page. It must be a valid drupal "
+"username."
 msgstr ""
 
 #: lib/Publican.pm:102
@@ -1278,7 +1342,9 @@ msgid "The brew dist to use for building the web rpm."
 msgstr ""
 
 #: lib/Publican.pm:431
-msgid "The directory where the image should be stored in drupal server. The default is \"sites/default/files/\""
+msgid ""
+"The directory where the image should be stored in drupal server. The default"
+" is \"sites/default/files/\""
 msgstr ""
 
 #: bin/publican:116
@@ -1290,7 +1356,8 @@ msgid "The language the XML will be written in"
 msgstr ""
 
 #: lib/Publican.pm:425
-msgid "The menu where we can find the book. The default value is menu-user-guide"
+msgid ""
+"The menu where we can find the book. The default value is menu-user-guide"
 msgstr ""
 
 #: bin/publican:114
@@ -1298,7 +1365,9 @@ msgid "The name of the book, article, set, or brand"
 msgstr ""
 
 #: lib/Publican.pm:246
-msgid "The name of the main xml and ent files for this book, sans file extension and language. Fetched from docname if not set."
+msgid ""
+"The name of the main xml and ent files for this book, sans file extension "
+"and language. Fetched from docname if not set."
 msgstr ""
 
 #: bin/publican:117
@@ -1318,19 +1387,29 @@ msgid "The version of the product"
 msgstr ""
 
 #: bin/publican:127
-msgid "This flag tells publican the data being processed is a distributed set. Note: do not use distributed_set on the command line. Publican uses this flag when calling itself to process distributed sets. This is the only safe way this flag can be used."
+msgid ""
+"This flag tells publican the data being processed is a distributed set. "
+"Note: do not use distributed_set on the command line. Publican uses this "
+"flag when calling itself to process distributed sets. This is the only safe "
+"way this flag can be used."
 msgstr ""
 
 #: lib/Publican.pm:344
-msgid "This is a home page for a Publican-generated website, not a standard book."
+msgid ""
+"This is a home page for a Publican-generated website, not a standard book."
 msgstr ""
 
 #: lib/Publican.pm:363
-msgid "This is a host name for a Publican-generated website, used for searches and the Sitemap. Be sure to include the full path to your document tree. E.g. if your documents are in the docs directory: http://www.example.com/docs"
+msgid ""
+"This is a host name for a Publican-generated website, used for searches and "
+"the Sitemap. Be sure to include the full path to your document tree. E.g. if"
+" your documents are in the docs directory: http://www.example.com/docs"
 msgstr ""
 
 #: lib/Publican.pm:358
-msgid "This is a special page for a Publican-generated website, not a standard book. Valid types are home, product, and version."
+msgid ""
+"This is a special page for a Publican-generated website, not a standard "
+"book. Valid types are home, product, and version."
 msgstr ""
 
 #: lib/Publican/CreateBook.pm:346
@@ -1350,11 +1429,14 @@ msgid "This is a test paragraph in a section"
 msgstr ""
 
 #: lib/Publican/WebSite.pm:104
-msgid "This is an iframe, to view it upgrade your browser or enable iframe display."
+msgid ""
+"This is an iframe, to view it upgrade your browser or enable iframe display."
 msgstr ""
 
 #: lib/Publican/WebSite.pm:115
-msgid "This web site requires JavaScript and cookies to be enabled to function correctly."
+msgid ""
+"This web site requires JavaScript and cookies to be enabled to function "
+"correctly."
 msgstr ""
 
 #: lib/Publican/WebSite.pm:111
@@ -1371,7 +1453,8 @@ msgid "Total for %1"
 msgstr ""
 
 #: bin/publican:173
-msgid "Transform XML to other formats (pdf, html, html-single, drupal-book, etc)"
+msgid ""
+"Transform XML to other formats (pdf, html, html-single, drupal-book, etc)"
 msgstr ""
 
 #. ($!,$@)
@@ -1386,22 +1469,28 @@ msgstr ""
 #. ($edition,$release)
 #: lib/Publican/Translate.pm:336
 msgid "Translation files synchronised with XML sources %1-%2"
-msgstr "Tradução de arquivos sincronizados com a versão %1-%2 de fontes do XML"
+msgstr ""
+"Tradução de arquivos sincronizados com a versão %1-%2 de fontes do XML"
 
 #: lib/Publican.pm:1260
 msgid "Translator"
 msgstr "Tradutor"
 
 #: lib/Publican.pm:315
-msgid "Type of content this package contains. Supported: set, book, article, brand"
+msgid ""
+"Type of content this package contains. Supported: set, book, article, brand"
 msgstr ""
 
 #: lib/Publican.pm:279
-msgid "Type of repository in which books that form part of a remote set are stored. Supported types: SVN."
+msgid ""
+"Type of repository in which books that form part of a remote set are stored."
+" Supported types: SVN."
 msgstr ""
 
 #: lib/Publican.pm:178
-msgid "URL for the documentation team for this package. Used for top right URL on HTML."
+msgid ""
+"URL for the documentation team for this package. Used for top right URL on "
+"HTML."
 msgstr ""
 
 #: lib/Publican.pm:270
@@ -1470,7 +1559,9 @@ msgid "Version of the DocBook DTD on which this project is based."
 msgstr ""
 
 #: lib/Publican.pm:328
-msgid "Version of this package. Fetched from productnumber tag in xml_lang/TYPE_Info.xml"
+msgid ""
+"Version of this package. Fetched from productnumber tag in "
+"xml_lang/TYPE_Info.xml"
 msgstr ""
 
 #: lib/Publican/WebSite.pm:109
@@ -1497,7 +1588,9 @@ msgid "WARNING: Image missing: %1"
 msgstr ""
 
 #: lib/Publican/Translate.pm:844
-msgid "WARNING: Message missing from PO file, consider updating your POT and PO files."
+msgid ""
+"WARNING: Message missing from PO file, consider updating your POT and PO "
+"files."
 msgstr ""
 
 #. ($pot_file)
@@ -1520,11 +1613,15 @@ msgid "WARNING: Unknow config key %1, ignoring.\n"
 msgstr ""
 
 #: lib/Publican/Builder.pm:3123
-msgid "WARNING: You can not create RPM packages with a blank abstract. Skipping RPM creation.\n"
+msgid ""
+"WARNING: You can not create RPM packages with a blank abstract. Skipping RPM"
+" creation.\n"
 msgstr ""
 
 #: lib/Publican/Builder.pm:3133
-msgid "WARNING: You can not create RPM packages with a blank subtitle. Skipping RPM creation.\n"
+msgid ""
+"WARNING: You can not create RPM packages with a blank subtitle. Skipping RPM"
+" creation.\n"
 msgstr ""
 
 #. ($key)
@@ -1533,7 +1630,9 @@ msgid "WARNING: config key %1 is not valid for this type of object, ignoring.\n"
 msgstr ""
 
 #: lib/Publican/XmlClean.pm:927
-msgid "WARNING: table validation failed. Could not determine table for tgroup, column numbers cannot be validated"
+msgid ""
+"WARNING: table validation failed. Could not determine table for tgroup, "
+"column numbers cannot be validated"
 msgstr ""
 
 #: bin/publican:103
@@ -1667,6 +1766,7 @@ msgstr ""
 #: lib/Publican.pm:1303
 msgid "keyword list can not be calculated before building."
 msgstr ""
+"A lista com a palavra chave não pode ser calculada antes de ser construída."
 
 #: lib/Publican.pm:1066 lib/Publican.pm:1112 lib/Publican.pm:1156
 #: lib/Publican.pm:1218 lib/Publican.pm:1288 lib/Publican.pm:1327
