--- a/publican/po/it.po
+++ b/publican/po/it.po
@@ -2,11 +2,12 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# rlandmann <rlandmann@fedoraproject.org>, 2013. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2012-08-30 01:20-0400\n"
+"PO-Revision-Date: 2013-03-08 12:00-0500\n"
 "Last-Translator: rlandmann <rlandmann@fedoraproject.org>\n"
 "Language-Team: Italian\n"
 "MIME-Version: 1.0\n"
@@ -885,7 +886,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1140
 msgid "Keywords"
-msgstr ""
+msgstr "Parole chiave"
 
 #: lib/Publican/WebSite.pm:96
 msgid "Language"
