--- a/publican/po/ja.po
+++ b/publican/po/ja.po
@@ -1,11 +1,12 @@
 # miey <miey@fedoraproject.org>, 2012. #zanata
 # ykatabam <ykatabam@fedoraproject.org>, 2012. #zanata
+# rlandmann <rlandmann@fedoraproject.org>, 2013. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2012-08-30 08:48-0400\n"
-"Last-Translator: miey <miey@fedoraproject.org>\n"
+"PO-Revision-Date: 2013-03-07 11:56-0500\n"
+"Last-Translator: rlandmann <rlandmann@fedoraproject.org>\n"
 "Language-Team: Japanese\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -895,7 +896,7 @@ msgstr ""
 
 #: lib/Publican/Builder.pm:1140
 msgid "Keywords"
-msgstr ""
+msgstr "キーワード"
 
 # translation auto-copied from project Publican, version 3, document publican
 #: lib/Publican/WebSite.pm:96
