add missing BZ number to Changes

--- a/publican/Changes
+++ b/publican/Changes
@@ -1,5 +1,5 @@
 3.1.5 Mon Mar 18 2013
-  - Fix translated PDS encode issue when build from packaged books.
+  - Fix translated PDF encode issue when build from packaged books. BZ #922618
 
 3.1.4 Tue Mar 12 2013
   - Fix entities in Book_Info braking build. BZ #917898
