--- a/publican/po/it.po
+++ b/publican/po/it.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2013-03-08 12:00-0500\n"
+"PO-Revision-Date: 2013-03-18 02:00-0400\n"
 "Last-Translator: rlandmann <rlandmann@fedoraproject.org>\n"
 "Language-Team: Italian\n"
 "MIME-Version: 1.0\n"
@@ -1515,7 +1515,7 @@ msgstr ""
 
 #: lib/Publican/Translate.pm:1095 lib/Publican/WebSite.pm:113
 msgid "Untranslated"
-msgstr ""
+msgstr "Non tradotto"
 
 #: bin/publican:259
 msgid "Update an existing sites templates."
