--- a/publican/po/de.po
+++ b/publican/po/de.po
@@ -2,12 +2,13 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# rlandmann <rlandmann@fedoraproject.org>, 2013. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2012-09-02 07:49-0400\n"
-"Last-Translator: hedda <hedda@fedoraproject.org>\n"
+"PO-Revision-Date: 2013-03-18 01:56-0400\n"
+"Last-Translator: rlandmann <rlandmann@fedoraproject.org>\n"
 "Language-Team: German (Germany)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1512,7 +1513,7 @@ msgstr ""
 
 #: lib/Publican/Translate.pm:1095 lib/Publican/WebSite.pm:113
 msgid "Untranslated"
-msgstr ""
+msgstr "Nicht übersetzt"
 
 #: bin/publican:259
 msgid "Update an existing sites templates."
