--- a/publican/po/fr.po
+++ b/publican/po/fr.po
@@ -2,13 +2,14 @@
 # Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# rlandmann <rlandmann@fedoraproject.org>, 2013. #zanata
 # samfreemanz <sfriedma@redhat.com>, 2013. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2013-03-06 01:10-0500\n"
-"Last-Translator: samfreemanz <sfriedma@redhat.com>\n"
+"PO-Revision-Date: 2013-03-18 01:58-0400\n"
+"Last-Translator: rlandmann <rlandmann@fedoraproject.org>\n"
 "Language-Team: French\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1515,7 +1516,7 @@ msgstr ""
 
 #: lib/Publican/Translate.pm:1095 lib/Publican/WebSite.pm:113
 msgid "Untranslated"
-msgstr ""
+msgstr "Non traduit"
 
 #: bin/publican:259
 msgid "Update an existing sites templates."
