--- a/publican/po/ko.po
+++ b/publican/po/ko.po
@@ -3,12 +3,13 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # eukim <eukim@fedoraproject.org>, 2013. #zanata
+# rlandmann <rlandmann@fedoraproject.org>, 2013. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2013-03-06 01:17-0500\n"
-"Last-Translator: eukim <eukim@fedoraproject.org>\n"
+"PO-Revision-Date: 2013-03-18 02:02-0400\n"
+"Last-Translator: rlandmann <rlandmann@fedoraproject.org>\n"
 "Language-Team: Korean\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1513,7 +1514,7 @@ msgstr ""
 
 #: lib/Publican/Translate.pm:1095 lib/Publican/WebSite.pm:113
 msgid "Untranslated"
-msgstr ""
+msgstr "번역되지 않음"
 
 #: bin/publican:259
 msgid "Update an existing sites templates."
