--- a/publican/po/pt_BR.po
+++ b/publican/po/pt_BR.po
@@ -3,12 +3,13 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 # gcintra <gcintra@fedoraproject.org>, 2013. #zanata
+# rlandmann <rlandmann@fedoraproject.org>, 2013. #zanata
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"PO-Revision-Date: 2013-03-06 01:25-0500\n"
-"Last-Translator: gcintra <gcintra@fedoraproject.org>\n"
+"PO-Revision-Date: 2013-03-18 02:06-0400\n"
+"Last-Translator: rlandmann <rlandmann@fedoraproject.org>\n"
 "Language-Team: Portuguese (Brazil)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1518,7 +1519,7 @@ msgstr ""
 
 #: lib/Publican/Translate.pm:1095 lib/Publican/WebSite.pm:113
 msgid "Untranslated"
-msgstr ""
+msgstr "Ainda sem tradução"
 
 #: bin/publican:259
 msgid "Update an existing sites templates."
