Add orgname to block/inline code. BZ #872955

--- a/publican/Changes
+++ b/publican/Changes
@@ -6,6 +6,7 @@
   - Fix nested block tags breaking translation flow. BZ #909728
   - Fix multiple calls to update_po breaking packaging. BZ #891167
   - Add website labels and translations. BZ #979885
+  - Add orgname to block/inline code. BZ #872955
 
 3.1.5 Mon Mar 18 2013
   - Fix translated PDF encode issue when build from packaged books. BZ #922618
